fixed static member in LocalCoordinateSystem

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -104,6 +104,7 @@ libgama_src = \
    gnu_gama/local/format.h \
    gnu_gama/local/gamadata.cpp \
    gnu_gama/local/gamadata.h \
+   gnu_gama/local/lcoords.cpp \
    gnu_gama/local/lcoords.h \
    gnu_gama/local/local_linearization.h \
    gnu_gama/local/localnetwork2sql.cpp \
