--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 #
 AC_PREREQ(2.69)
-AC_INIT([gama], [2.04.1], [bug-gama@gnu.org])
+AC_INIT([gama], [2.05], [bug-gama@gnu.org])
 AC_CONFIG_SRCDIR([lib/gnu_gama/version.cpp])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_AUX_DIR([scripts/config.aux])
@@ -111,6 +111,8 @@ AC_OUTPUT([
    tests/matvec/Makefile
    tests/statan/Makefile
    tests/acord2/Makefile
+   tests/acord2/input/a2g/Makefile
+   tests/acord2/input/a2diff/Makefile
    tests/gama-local/Makefile
    tests/gama-local/input/Makefile
    tests/gama-local/scripts/Makefile
