--- a/tests/acord2/Makefile.am
+++ b/tests/acord2/Makefile.am
@@ -1,3 +1,5 @@
+EXTRA_DIST = acord2-a2g.in acord2-a2diff.in
+
 AM_CPPFLAGS = -I$(top_srcdir)/lib
 AM_DEFAULT_SOURCE_EXT = .cpp
 LDADD = $(top_builddir)/lib/libgama.a
@@ -5,26 +7,28 @@ LDADD = $(top_builddir)/lib/libgama.a
 check_PROGRAMS = a2g a2diff
 
 a2g_SOURCES  = a2g-main.cpp a2g.h a2g.cpp
-a2g_LDADD    = $(top_builddir)/lib/libgama.a
-a2g_CPPFLAGS = -I $(top_srcdir)/lib
+#a2g_LDADD    = $(top_builddir)/lib/libgama.a
+#a2g_CPPFLAGS = -I $(top_srcdir)/lib
 
 a2diff_SOURCES  = a2diff-main.cpp
-a2diff_LDADD    = $(top_builddir)/lib/libgama.a
-a2diff_CPPFLAGS = -I $(top_srcdir)/lib
+#a2diff_LDADD    = $(top_builddir)/lib/libgama.a
+#a2diff_CPPFLAGS = -I $(top_srcdir)/lib
 
-TESTS = acord2-a2diff.sh acord2-a2g.sh
+TESTS = acord2-a2g.sh acord2-a2diff.sh
+
+SUBDIRS = input/a2g input/a2diff
 
 @VALGRIND_CHECK_RULES@
 
 ACORD2_A2G_FILES = \
-  angle-01.a2g \
-  angle-01.0.a2g \
-  polar-01.a2g\
-  polar-02.a2g \
+  angle-01.a2g    \
+  angle-01.0.a2g  \
+  polar-01.a2g    \
+  polar-02.a2g    \
   traverse-01.a2g \
   traverse-02.a2g \
   traverse-03.a2g \
-  trivial-01.a2g \
+  trivial-01.a2g  \
   trivial-02.a2g
 
 #   azimuth-01.a2g
@@ -70,10 +74,10 @@ clean-local-check:
 $(ACORD2_RESULTS):
 	mkdir -p $(ACORD2_RESULTS)
 
-acord2-a2g.sh : acord2-a2g.in $(ACORD2_OTHERS)
+acord2-a2g.sh : $(ACORD2_SCRIPT)/acord2-a2g.in $(ACORD2_OTHERS)
 	@$(do_subst) < $(ACORD2_SCRIPT)/acord2-a2g.in > acord2-a2g.sh
 	@chmod +x acord2-a2g.sh
 
-acord2-a2diff.sh : acord2-a2diff.in $(ACORD2_OTHERS)
+acord2-a2diff.sh : $(ACORD2_SCRIPT)/acord2-a2diff.in $(ACORD2_OTHERS)
 	@$(do_subst) < $(ACORD2_SCRIPT)/acord2-a2diff.in > acord2-a2diff.sh
 	@chmod +x acord2-a2diff.sh
