forgotten CMakeLists.txt in tests/acord2/Makefile.am in EXTRA_DIST

--- a/tests/acord2/Makefile.am
+++ b/tests/acord2/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = acord2-a2g.in acord2-a2diff.in
+EXTRA_DIST = CMakeLists.txt acord2-a2g.in acord2-a2diff.in
 
 AM_CPPFLAGS = -I$(top_srcdir)/lib
 AM_DEFAULT_SOURCE_EXT = .cpp
