--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project (gnu-gama VERSION 2.05.a01)
+project (gnu-gama VERSION 2.05.01)
 
 set(CMAKE_CXX_STANDARD 11)
 
