AcordAzimuth first buggy draft (50% failed for azimuth-01.a2g test)

--- a/tests/acord2/Makefile.am
+++ b/tests/acord2/Makefile.am
@@ -23,6 +23,7 @@ SUBDIRS = input/a2g input/a2diff
 ACORD2_A2G_FILES = \
   angle-01.a2g    \
   angle-01.0.a2g  \
+  azimuth-01.a2g  \
   polar-01.a2g    \
   polar-02.a2g    \
   traverse-01.a2g \
