new a2g tests azimuth 02 03 04 05

--- a/tests/acord2/input/a2g/Makefile.am
+++ b/tests/acord2/input/a2g/Makefile.am
@@ -2,6 +2,10 @@ EXTRA_DIST = \
   angle-01.0.a2g  \
   angle-01.a2g	  \
   azimuth-01.a2g  \
+  azimuth-02.a2g  \
+  azimuth-03.a2g  \
+  azimuth-04.a2g  \
+  azimuth-05.a2g  \
   polar-01.a2g	  \
   polar-02.a2g	  \
   traverse-01.a2g \
