--- a/tests/acord2/Makefile.am
+++ b/tests/acord2/Makefile.am
@@ -24,6 +24,10 @@ ACORD2_A2G_FILES = \
   angle-01.a2g    \
   angle-01.0.a2g  \
   azimuth-01.a2g  \
+  azimuth-02.a2g  \
+  azimuth-03.a2g  \
+  azimuth-04.a2g  \
+  azimuth-05.a2g  \
   polar-01.a2g    \
   polar-02.a2g    \
   traverse-01.a2g \
