--- a/tests/acord2/Makefile.am
+++ b/tests/acord2/Makefile.am
@@ -33,6 +33,7 @@ ACORD2_A2G_FILES = \
   traverse-01.a2g \
   traverse-02.a2g \
   traverse-03.a2g \
+  traverse-04.a2g \
   trivial-01.a2g  \
   trivial-02.a2g
 
