--- a/tests/acord2/input/a2g/Makefile.am
+++ b/tests/acord2/input/a2g/Makefile.am
@@ -11,5 +11,6 @@ EXTRA_DIST = \
   traverse-01.a2g \
   traverse-02.a2g \
   traverse-03.a2g \
+  traverse-04.a2g \
   trivial-01.a2g  \
   trivial-02.a2g
