--- a/tests/gama-local/scripts/gama-local-html.in
+++ b/tests/gama-local/scripts/gama-local-html.in
@@ -2,11 +2,18 @@
 
 set -e
 
-# depends on gama-local-adjustment
+# depends on gama-local-adjustment.in
 
 for g in @INPUT_FILES@
 do
     scripts/check_html $g \
         @GAMA_RESULTS@/gama-local-adjustment/$g-gso.html \
+        @GAMA_INPUT@/$g.xml
+done
+
+for g in @INPUT_FILES@
+do
+    scripts/check_html $g-360 \
+        @GAMA_RESULTS@/gama-local-adjustment/$g-gso-360.html \
         @GAMA_INPUT@/$g.xml
 done
