--- a/tests/gama-local/scripts/gama-local-version.in
+++ b/tests/gama-local/scripts/gama-local-version.in
@@ -5,4 +5,4 @@ set -e
 echo Package version @PACKAGE_VERSION@
 @top_builddir@/bin/gama-local --version
 
-scripts/check_version @top_builddir@/configure.ac @top_builddir@/CMakeLists.txt
+scripts/check_version @top_srcdir@/configure.ac @top_srcdir@/CMakeLists.txt
