minor maintenance issues and cleanup * configure.ac : conditional build for makeinfo * gama-pro.cpp moved to .var/deprecated, removed gama-local.pro * relaxed small angles in intersections from 10 to 6 gon   in Acord class during second computation loop * top .gitignore += *.json out * updated version of m4/ax_cxx_compile_stdcxx.m4

--- a/configure.ac
+++ b/configure.ac
@@ -1,37 +1,41 @@
-#                                               -*- Autoconf -*-
-# Process this file with autoconf to produce a configure script.
-#
-AC_PREREQ(2.69)
+dnl GNU General Public license v3 or later
+dnl Copyright 2019 Ales Cepek <cepek@gnu.org>
+
+dnl Process this file with autoconf to produce a configure script.
+
+AC_PREREQ([2.69])
+
 AC_INIT([gama], [2.06], [bug-gama@gnu.org])
 AC_CONFIG_SRCDIR([lib/gnu_gama/version.cpp])
-AC_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_AUX_DIR([scripts/config.aux])
 
 AM_INIT_AUTOMAKE
 AM_SILENT_RULES([yes])
 
 
-# You can comment out the following macro if you have the package
-# autoconf-archive installed
-#
+dnl You can comment out the following macro if you have the package
+dnl autoconf-archive installed
+
 AC_CONFIG_MACRO_DIR([m4])
-#
-# Install package autoconf-archive or download from
-# git://git.sv.gnu.org/autoconf-archive.git
-#
-# https://www.gnu.org/software/autoconf-archive/ax_cxx_compile_stdcxx_11.html
-# https://www.gnu.org/software/autoconf-archive/ax_valgrind_check.html
-#
+
+dnl Install package autoconf-archive or download from
+dnl git://git.sv.gnu.org/autoconf-archive.git
+dnl
+dnl https://www.gnu.org/software/autoconf-archive/ax_cxx_compile_stdcxx_11.html
+dnl https://www.gnu.org/software/autoconf-archive/ax_valgrind_check.html
+
 AX_CXX_COMPILE_STDCXX([11], [noext], [mandatory])
 AX_VALGRIND_DFLT([sgcheck], [off])
 AX_VALGRIND_CHECK
 
 
-# Checks for programs.
+dnl Checks for programs.
+
 AC_PROG_CXX
 AC_PROG_CC
-AC_PROG_CPP
-AC_PROG_LN_S
+dnl AC_PROG_CPP
+dnl AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_PROG_RANLIB
 
@@ -51,11 +55,20 @@ AC_ARG_ENABLE([gama-g3],
 AC_MSG_NOTICE([checking whether gama-g3 build is enabled... $enable_gama_g3])
 
 
-# Checks for libraries libexpat1-dev, libsqlite3-dev
+dnl Check for makeinfo
+
+AC_CHECK_PROG([gnu_gama_makeinfo],[makeinfo], [yes], [no])
+AM_CONDITIONAL([GNU_GAMA_MAKEINFO], [test "x$gnu_gama_makeinfo" = xyes])
+AM_COND_IF([GNU_GAMA_MAKEINFO],,
+   AC_MSG_WARN([*** 'makeinfo' is missing on your system])
+   MAKEINFO=true
+)
+
+dnl Checks for libraries libexpat1-dev, libsqlite3-dev
 
 AC_CHECK_LIB([expat], [XML_ParserCreate])
 if test "x$ac_cv_lib_expat_XML_ParserCreate" != "xyes"; then
-       AC_MSG_WARN([Build with local copy of expat 1.1 XML parser])
+       AC_MSG_WARN([*** build with local copy of 'expat' 1.1 XML parser])
        AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_EXPAT_1_1], [true])
        AC_DEFINE([GNU_gama_expat_1_1],1,
                  [Optional support for expat 1.1 from local sources])
@@ -64,6 +77,9 @@ else
        AC_CHECK_HEADER(expat.h, , [AC_MSG_ERROR(
                 [Cannot find expat.h ... please install libexpat1-dev] )])
 fi
+
+
+dnl Check for sqlite3 support
 
 AC_CHECK_LIB([sqlite3], [sqlite3_open])
 if test "x$ac_cv_lib_sqlite3_sqlite3_open" = "xyes"; then
@@ -74,31 +90,31 @@ if test "x$ac_cv_lib_sqlite3_sqlite3_open" = "xyes"; then
 fi
 
 
-# Check for xmllint
+dnl Check for xmllint
 
 AC_CHECK_PROG(GNU_GAMA_LOCAL_TEST_XMLLINT, xmllint, yes, no)
 AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_XMLLINT],
                [test "x$GNU_GAMA_LOCAL_TEST_XMLLINT" = "xyes"])
 
 if test "x$GNU_GAMA_LOCAL_TEST_XMLLINT" != "xyes"; then
-   AC_MSG_WARN([*** xmllint not found, XML files will not be validated])
+   AC_MSG_WARN([*** 'xmllint' not found, XML files will not be validated])
 fi
 
 
-# Check for octave
+dnl Check for octave
 
 AC_CHECK_PROG(GNU_GAMA_LOCAL_TEST_OCTAVE, octave, yes, no)
 AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_OCTAVE],
                [test "x$GNU_GAMA_LOCAL_TEST_OCTAVE" = "xyes"])
 
 if test "x$GNU_GAMA_LOCAL_TEST_OCTAVE" != "xyes"; then
-   AC_MSG_WARN([*** octave not found, .m files will not be validated])
+   AC_MSG_WARN([*** 'octave' not found, .m files will not be validated])
 fi
 
 
-# Checks for header files.
-AC_HEADER_STDC
+dnl Checks for header files.
 
+AC_HEADER_STDC
 
 AC_OUTPUT([
    Makefile
