--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project (gnu-gama VERSION 2.06)
 set(CMAKE_CXX_STANDARD 11)
 
 add_definitions(-DGNU_gama_expat_1_1)
-add_definitions(-DDEBUG_ACORD2)
+#add_definitions(-DDEBUG_ACORD2)
 #add_definitions(-DA2G_DEBUG)
 
 # Library
