--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,6 @@
 AUTOMAKE_OPTIONS = subdir-objects
 
 EXTRA_DIST = autogen.sh ChangeLog.1 Doxyfile gama.dox CMakeLists.txt \
-    m4/README m4/ax_cxx_compile_stdcxx.m4 m4/ax_cxx_compile_stdcxx.m4 \
-    gama-local.pro
+    m4/README m4/ax_cxx_compile_stdcxx.m4 m4/ax_cxx_compile_stdcxx.m4
 
 SUBDIRS = lib bin doc scripts xml tests
