--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,6 +1,6 @@
-EXTRA_DIST = build-dictionaries.sh build-ellipsoids.sh gama-local-pro.cpp
+EXTRA_DIST = build-dictionaries.sh build-ellipsoids.sh
 
-noinst_PROGRAMS   = slovnikar ellipsoids_xml gama-local-pro
+noinst_PROGRAMS   = slovnikar ellipsoids_xml
 
 slovnikar_SOURCES = slovnikar.cpp
 slovnikar_LDADD   = $(top_builddir)/lib/libgama.a
@@ -9,5 +9,3 @@ slovnikar_CPPFLAGS = -I $(top_srcdir)/lib
 ellipsoids_xml_SOURCES = ellipsoids_xml.cpp
 ellipsoids_xml_LDADD   = $(top_builddir)/lib/libgama.a
 ellipsoids_xml_CPPFLAGS = -I $(top_srcdir)/lib
-
-gama_local_pro_SOURCES = gama-local-pro.cpp
