class Acord2 new algorithms, bug fixes, new tests and enhancements

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -102,6 +102,8 @@ libgama_src = \
    gnu_gama/local/acord/acordalgorithm.h \
    gnu_gama/local/acord/acordazimuth.cpp \
    gnu_gama/local/acord/acordazimuth.h \
+   gnu_gama/local/acord/acordzderived.cpp \
+   gnu_gama/local/acord/acordzderived.h \
    gnu_gama/local/acord/acordhdiffs.cpp \
    gnu_gama/local/acord/acordhdiffs.h \
    gnu_gama/local/acord/acordpolar.cpp \
@@ -110,6 +112,8 @@ libgama_src = \
    gnu_gama/local/acord/acordtraverse.h \
    gnu_gama/local/acord/acordstatistics.h \
    gnu_gama/local/acord/acordstatistics.cpp \
+   gnu_gama/local/acord/acordvectors.h \
+   gnu_gama/local/acord/acordvectors.cpp \
    gnu_gama/local/acord/acordweakchecks.cpp \
    gnu_gama/local/acord/acordweakchecks.h \
    gnu_gama/local/acord/reduce_observations.cpp \
