conditional build with legacy expat 1.1. (implicitly disabled) 	modified:   CMakeLists.txt 	new file:   HACKING.md 	modified:   configure.ac 	modified:   lib/gnu_gama/version.cpp

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
 
-AC_INIT([gama], [2.07.2], [bug-gama@gnu.org])
+AC_INIT([gama], [2.07.3], [bug-gama@gnu.org])
 AC_CONFIG_SRCDIR([lib/gnu_gama/version.cpp])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_AUX_DIR([scripts/config.aux])
@@ -22,7 +22,6 @@ AC_CONFIG_MACRO_DIR([m4])
 dnl Install package autoconf-archive or download from
 dnl git://git.sv.gnu.org/autoconf-archive.git
 dnl
-dnl https://www.gnu.org/software/autoconf-archive/ax_cxx_compile_stdcxx_11.html
 dnl https://www.gnu.org/software/autoconf-archive/ax_valgrind_check.html
 
 AX_CXX_COMPILE_STDCXX([14], [noext], [mandatory])
@@ -34,13 +33,11 @@ dnl Checks for programs.
 
 AC_PROG_CXX
 AC_PROG_CC
-dnl AC_PROG_CPP
-dnl AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_PROG_RANLIB
 
-AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_SQLITE_READER], [false])
-AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_EXPAT_1_1], [false])
+
+dnl Optional build of gama-g3
 
 AC_ARG_ENABLE([gama-g3],
    [AS_HELP_STRING([--enable-gama-g3[[=yes|no]]],
@@ -64,29 +61,36 @@ AM_COND_IF([GNU_GAMA_MAKEINFO],,
    MAKEINFO=true
 )
 
-dnl Checks for libraries libexpat1-dev, libsqlite3-dev
+dnl Optional build with legacy expat 1.1 (local copy)
 
-AC_CHECK_LIB([expat], [XML_ParserCreate])
-if test "x$ac_cv_lib_expat_XML_ParserCreate" != "xyes"; then
-       AC_MSG_WARN([*** build with local copy of 'expat' 1.1 XML parser])
-       AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_EXPAT_1_1], [true])
-       AC_DEFINE([GNU_gama_expat_1_1],1,
-                 [Optional support for expat 1.1 from local sources])
-       CPPFLAGS="${CPPFLAGS} -DGNU_gama_expat_1_1"
+AC_ARG_ENABLE(
+   [expat_1_1],
+   [AS_HELP_STRING([--enable-expat_1_1[[=yes|no]]],
+   [Enable build with legacy expat parser version 1.1 (default is yes)])]
+)
+AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_EXPAT_1_1], [false])
+AS_IF([test x$enable_expat_1_1 != xyes], enable_expat_1_1=no)
+if test x$enable_expat_1_1 = xyes; then
+   AC_MSG_WARN([build with local copy of expat 1.1 XML parser])
+   AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_EXPAT_1_1], [true])
+   AC_SUBST([CPPFLAGS], "${CPPFLAGS} -DGNU_gama_expat_1_1")
 else
-       AC_CHECK_HEADER(expat.h, , [AC_MSG_ERROR(
-                [Cannot find expat.h ... please install libexpat1-dev] )])
+   AC_CHECK_LIB([expat], [XML_ParserCreate],,
+      [AC_MSG_ERROR([Expat XML parser library is not installed])])
+   AC_CHECK_HEADERS([expat.h],,
+      [AC_MSG_ERROR([Cannot find expat.h, please install libexpat1-dev])])
 fi
 
 
 dnl Check for sqlite3 support
 
+AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_SQLITE_READER], [false])
 AC_CHECK_LIB([sqlite3], [sqlite3_open])
 if test "x$ac_cv_lib_sqlite3_sqlite3_open" = "xyes"; then
        AM_CONDITIONAL([GNU_GAMA_LOCAL_TEST_SQLITE_READER], [true])
        AC_DEFINE([GNU_GAMA_LOCAL_SQLITE_READER],1,
                  [Conditional support for sqlite3 databases])
-       CPPFLAGS="${CPPFLAGS} -DGNU_GAMA_LOCAL_SQLITE_READER"
+       AC_SUBST([CPPFLAGS], "${CPPFLAGS} -DGNU_GAMA_LOCAL_SQLITE_READER")
 fi
 
 
