Acord2 new test trivial-03 (three given points and three distances) Three points with known coordiantes, one point without coordinate and three distances. Intersection for two distances is ambiguous, but Acord2 uses the third distance to get the correct unique solution.

--- a/tests/acord2/Makefile.am
+++ b/tests/acord2/Makefile.am
@@ -35,7 +35,8 @@ ACORD2_A2G_FILES = \
   traverse-03.a2g \
   traverse-04.a2g \
   trivial-01.a2g  \
-  trivial-02.a2g
+  trivial-02.a2g  \
+  trivial-03.a2g
 
 #   azimuth-01.a2g
 
