--- a/tests/acord2/input/a2g/Makefile.am
+++ b/tests/acord2/input/a2g/Makefile.am
@@ -13,4 +13,5 @@ EXTRA_DIST = \
   traverse-03.a2g \
   traverse-04.a2g \
   trivial-01.a2g  \
-  trivial-02.a2g
+  trivial-02.a2g  \
+  trivial-03.a2g
