--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 project (gnu-gama VERSION 2.08.1)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_definitions(-DGNU_gama_expat_1_1)
 #add_definitions(-DDEBUG_ACORD2)
